--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 /* ------------------------ */
 /* Custom Properties        */
 /* ------------------------ */
@@ -251,6 +253,117 @@ body {
   box-shadow: 0 0 0px 3px var(--clr-primary-orange);
 }
 
+.company-name,
+.sneaker-description {
+  margin-block: 1rem;
+}
+
+.sneaker-edition {
+  line-height: 1;
+}
+
+.price-holder {
+  font-weight: 700;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.current-price {
+  font-size: 1.5rem;
+}
+
+.discount {
+  font-size: 0.9rem;
+  padding: 0.06125em 0.5em;
+  border-radius: 5px;
+  height: fit-content;
+}
+
+.old-price {
+  position: relative;
+  font-size: 0.75rem;
+}
+
+.old-price::before {
+  content: '';
+  width: 100%;
+  height: 0.01em;
+  position: absolute;
+  background-color: var(--clr-secondary-gray);
+  top: 55%;
+}
+
+.quantity-holder {
+  position: relative;
+  display: grid;
+  /* grid-template-columns: repeat(3, 1fr); */
+  place-items: center;
+  background-color: var(--clr-secondary-light);
+  margin-block: 1rem;
+  border-radius: 10px;
+}
+.quantity-holder::before {
+  content: url(./images/icon-minus.svg);
+  color: var(--clr-primary-orange);
+  position: absolute;
+  left: 5%;
+  margin-top: -6px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.quantity-holder::after {
+  content: url(./images/icon-plus.svg);
+  color: var(--clr-primary-orange);
+  position: absolute;
+  left: 90%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.quantity-holder:hover::after,
+.quantity-holder:hover::before {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.quantity {
+  font-weight: 700;
+  padding-block: 0.6125rem;
+}
+
+.cart-button {
+  width: 100%;
+  position: relative;
+  border: 0;
+  padding: 0.6125rem 0;
+  border-radius: 10px;
+}
+.cart-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.cart-button::before {
+  content: url(./images/icon-cart.svg);
+  filter: invert(42%) sepia(93%) saturate(0%) hue-rotate(0deg) brightness(200%)
+    contrast(100%);
+  height: 120%;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 20%;
+}
+
 @media only screen and (min-width: 45rem) {
   main {
     margin-top: 5rem;
@@ -289,5 +402,24 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-block: 2rem;
+  }
+  .price-holder {
+    display: block;
+  }
+  .cart-manager {
+    display: grid;
+    grid-template-columns: 30% 50%;
+    align-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .cart-button {
+    height: min-content;
+  }
+}
+
+@media only screen and (min-width: 45rem) and (max-width: 992px) {
+  .cart-button::before {
+    display: none;
   }
 }
